created database models for posts

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -48,8 +48,8 @@
         </div>
         <div class="col-md-4">
         <div class="content-section">
-            <h3>What you want ah?</h3>
-            <p class='text-muted'>Click where you wanna go.
+            <h3>Hello there!</h3>
+            <p class='text-muted'>Welcome to my blog.
             <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
