--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,7 +1,7 @@
 <!-- users/templates/users/login.html --> 
 {% extends "blog/base.html" %}
 {% block content %}
-    <h2>You have been logged out.</h2>
+    <h2>You have been logged out</h2>
     <div class="border-top pt-3">
         <small class="text-muted">
             <a href="{% url 'login' %}">Log in again</a>
