--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -62,7 +62,7 @@
         <div class="col-md-4">
         <div class="content-section">
             <h3>Hello there!</h3>
-            <p class='text-muted'>Welcome to my blog.
+            <p class='text-muted'>Welcome to my blog
             <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
